 * qlog:
   * Added "tag revision" action to context menu. (Craig Hewetson)
   * Robust handling of bogus --fixed properties. (Bug #436834, Craig Hewetson)
 * treewidget:
   * Fixed compatibility with PyQt < 4.6. 
     (Bug #479093, Bug #478979, Gary van der Merwe)
   * Extended keyboard navigation: pressing Enter invokes default action
     for selected item. (Bug #483597, Alexander Belchenko)


0.16 "Acacia" - 2009/11/9
-------------------------
What's new in this release:

 * qswitch:
   * Added support for --create-branch option to "bzr switch". (A. S. Budden)
 * SubprocessUIFactory and QUIFactory now both support get_username, and
   get_boolean. (Bug #421851, Gary van der Merwe)
 * Save the size of Dialogs when the user press Esc. (Bug #417809,
   Gary van der Merwe)
 * qlog:
   * Get the max main_line digets in a different way so that we don't break 
     --no-graph. (Bug #455867, Gary van der Merwe)
   * Corrected the margin for the revision number column. (Gary van der Merwe)
   * When loading the file list delta, only lock the repositories that are
     being used. If the 2 trees are from the same repositories, load them 
     together. (Gary van der Merwe)
   * When viewing a svn repo, only show the file list if 1 revision is selected,
     and if so, use a optimized method to do so. (Bug #450225,
     Gary van der Merwe)
   * Show a throbber above the file list while a delta is being loaded.
     (Gary van der Merwe)
   * Fix a bug when refreshing a branch with revisions that have been removed.
     (Bug #435486, Gary van der Merwe)
 * qlog/qannotate:
   * Preserve leading whitespace in the lines of the log message.
     (Max Bowsher)
 * qadd:
   * Don't show unchanged directories that contain ignored files. 
     (Bug #462435, Gary van der Merwe)
 * qcommit, qadd, qrevert:
   * Directoies with 4 or more sub items are grouped in the tree view.
     (Bug #456198, Gary van der Merwe)
   * Correct the old path shown for renamed files. (Bug #432572,